<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailHotel">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:id="@+id/tv_photo_received"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:contentDescription="@string/gambar_hotel"
            tools:src="@tools:sample/avatars" />

        <RatingBar
            android:layout_width="wrap_content"
            android:id="@+id/tv_rate_received"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="#4D000000"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:numStars="5"
            android:max="5"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:isIndicator="true"
            android:rating="@string/rate"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/tv_price_received"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/price"
        android:textSize="32sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/tv_name_received"
        android:layout_marginBottom="16dp"
        android:text="@string/hotels_name"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/tv_detail_received"
        android:layout_marginBottom="16dp"
        android:lineSpacingMultiplier="1"
        android:text="@string/detail" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:id="@+id/tv_phone_received"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/hubungi" />
    </LinearLayout>
</ScrollView>